# neopz

./: .buildinfo  .cdtconfigure.BoostLogged  .cdtconfigure.Build (GNU)  .cproject  .gitignore  .gitmodules  .project  AUTHORS  CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  ChangeLog  CompilerOptionsMSVC.cmake  Doxyfile  MainTestesJan15.cpp  MainTestesJan15.h  Makefile  Makefile.am  Makefile.cvs  Makefile.in  NEWS  NumIntegPyramid.cpp  NumIntegPyramid.h  PZ.mk.in  PZConfig.cmake.in  PZConfigVersion.cmake.in  PZ_pira.mk.in  PZ_user.mk.in  PrismExtend.cpp  PrismExtend.h  README  README.md  README.txt  TAGS  TPZElastoplasticTests.cpp  acinclude.m4  aclocal.m4  biot.net  config.h  config.h.in  (+15 more)
Analysis/: CMakeLists.txt  Makefile.am  Makefile.in  TPZAnalysis.cpp  TPZAnalysis.h  TPZEigenAnalysis.cpp  TPZEigenAnalysis.h  TPZEigenAnalysisBase.cpp  TPZEigenAnalysisBase.h  TPZLinearAnalysis.cpp  TPZLinearAnalysis.h  TPZNLMultGridAnalysis.cc  TPZNLMultGridAnalysis.cpp  TPZNLMultGridAnalysis.h  TPZQuadEigenAnalysis.cpp  TPZQuadEigenAnalysis.h  TPZStaticAnalysis.cpp  TPZStaticAnalysis.h  doxanalysis.h  pzanalysis.cc  pzanalysis.cpp  pzanalysis.h  pzanalysiserror.cc  pzanalysiserror.cpp  pzanalysiserror.h  pzblackoilanalysis.cpp  pzblackoilanalysis.h  pzeuleranalysis.cc  pzeuleranalysis.cpp  pzeuleranalysis.h  pzexplfinvolanal.cpp  pzexplfinvolanal.h  pzmganalysis.cc  pzmganalysis.cpp  pzmganalysis.h  pzmganalysis_texas.cpp  pzmganalysis_texas.h  pznonlinanalysis.cc  pznonlinanalysis.cpp  pznonlinanalysis.h  (+12 more)
Common/: CMakeLists.txt  Makefile.am  Makefile.in  TPZBlas.h  TPZConsLawTypes.h  TPZElectromagneticConstants.h  TPZGuiInterface.cpp  TPZGuiInterface.h  TPZLapack.h  TPZReschedulableTask.cpp  TPZReschedulableTask.h  TPZTask.cpp  TPZTask.h  TPZTaskGroup.cpp  TPZTaskGroup.h  TPZThreadPool.cpp  TPZThreadPool.h  config.h  config.h.in  doxcommon.h  fadType.h  fpo_exceptions.h  pz_config.h.in  pz_pthread.cpp  pz_pthread.h  pz_shared_exports.h  pzdebug.h  pzeltype.h  pzerror.cpp  pzerror.h  pzp_thread.cpp  pzp_thread.h  pzreal.cpp  pzreal.h  pzstream.h  pzthreadpool.cpp  pzthreadpool.h  pzversion.h
Exception/: CMakeLists.txt  TPZConvergenceException.cpp  TPZConvergenceException.h  TPZException.cpp  TPZException.h  TPZInconsistentStateException.cpp  TPZInconsistentStateException.h
Frontal/: CMakeLists.txt  Makefile.am  Makefile.in  TPZFileEqnStorage.cc  TPZFileEqnStorage.cpp  TPZFileEqnStorage.h  TPZFront.cc  TPZFront.cpp  TPZFront.h  TPZFrontMatrix.cc  TPZFrontMatrix.cpp  TPZFrontMatrix.h  TPZFrontNonSym.cc  TPZFrontNonSym.cpp  TPZFrontNonSym.h  TPZFrontSym.cc  TPZFrontSym.cpp  TPZFrontSym.h  TPZParFrontMatrix.cc  TPZParFrontMatrix.cpp  TPZParFrontMatrix.h  TPZStackEqnStorage.cc  TPZStackEqnStorage.cpp  TPZStackEqnStorage.h  pzvecfrontal.cpp  tpzeqnarray.cpp  tpzeqnarray.h
Geom/: CMakeLists.txt  Makefile.am  Makefile.in  PrismExtend.cpp  PrismExtend.h  TPZGeoCube.cc  TPZGeoCube.cpp  TPZGeoCube.h  TPZGeoElement.cc  TPZGeoExtend.h  TPZGeoLinear.cc  TPZGeoLinear.cpp  TPZGeoLinear.h  doxgeometry.h  pzgeom_utility.cpp  pzgeom_utility.h  pzgeopoint.cc  pzgeopoint.cpp  pzgeopoint.h  pzgeoprism.cc  pzgeoprism.cpp  pzgeoprism.h  pzgeopyramid.cc  pzgeopyramid.cpp  pzgeopyramid.h  pzgeoquad.cc  pzgeoquad.cpp  pzgeoquad.h  pzgeotetrahedra.cc  pzgeotetrahedra.cpp  pzgeotetrahedra.h  pzgeotriangle.cc  pzgeotriangle.cpp  pzgeotriangle.h  pznoderep.cpp  pznoderep.h  pznoderep.h.h  pzshapeextend.h  tpzgeoblend.cpp  tpzgeoblend.h
Integral/: CMakeLists.txt  Makefile.am  Makefile.in  TPZIntQuadQuarterPoint.cpp  TPZIntQuadQuarterPoint.h  adapt.cpp  adapt.h  doxintegral.h  pzquad.cc  pzquad.cpp  pzquad.h  tpzgausslobattorule.cpp  tpzgausslobattorule.h  tpzgaussrule.cpp  tpzgaussrule.h  tpzint1point.cpp  tpzint1point.h  tpzintpoint.h  tpzintpoints.cpp  tpzintpoints.h  tpzintrule.cpp  tpzintrule.h  tpzintrulelist.cpp  tpzintrulelist.h  tpzintrulep3d.cpp  tpzintrulep3d.h  tpzintrulet.cpp  tpzintrulet.h  tpzintrulet3d.cpp  tpzintrulet3d.h  tpzprinteg.cpp  tpzprinteg.h
LinearSolvers/: CMakeLists.txt  Makefile.am  Makefile.in  TPZPardisoHandler.cpp  TPZPardisoHandler.h  bicg.h  bicgstab.h  cg.h  cgbet.h  cgs.h  cheby.h  gmres.h  ir.h  qmr.h
Material/: CMakeLists.txt  Makefile.am  Makefile.in  TPZBndCond.cpp  TPZBndCond.h  TPZBndCondBase.h  TPZBndCondT.cpp  TPZBndCondT.h  TPZBndCondWithMem.cpp  TPZBndCondWithMem.h  TPZBndCondWithMem_impl.h  TPZConsLawTest.cc  TPZConsLawTest.cpp  TPZConsLawTest.h  TPZConservationLaw.cc  TPZConservationLaw.cpp  TPZConservationLaw.h  TPZDiffusionConsLaw.cpp  TPZDiffusionConsLaw.h  TPZDiscontinuousGalerkinTranslator.cpp  TPZDiscontinuousGalerkinTranslator.h  TPZElast3Dnlinear.cpp  TPZElast3Dnlinear.h  TPZEuler.cc  TPZEuler.cpp  TPZEuler.h  TPZEulerConsLaw.cc  TPZEulerConsLaw.cpp  TPZEulerConsLaw.h  TPZFVHybrid.cpp  TPZFVHybrid.h  TPZLagrangeMultiplier.cpp  TPZLagrangeMultiplier.h  TPZLagrangeMultiplierCS.cpp  TPZLagrangeMultiplierCS.h  TPZLinearConvecDiff.cpp  TPZLinearConvecDiff.h  TPZLinearConvection.cc  TPZLinearConvection.cpp  TPZLinearConvection.h  (+183 more)
Matrix/: CMakeLists.txt  Makefile.am  Makefile.in  PZMatrixMarket.cpp  PZMatrixMarket.h  TPZBlockDiag.cpp  TPZBlockDiag.h  TPZCopySolve.h  TPZEigenSparseMatrix.cpp  TPZEigenSparseMatrix.h  TPZFMatrixRef.h  TPZMatrixWindow.cpp  TPZMatrixWindow.h  TPZPardisoControl.cpp  TPZPardisoControl.h  TPZSBMatrixLapack.cpp  TPZSBMatrixLapack.h  TPZSYSMPMatrix.cpp  TPZSYSMPMatrix.h  TPZSYSMPPardiso.cpp  TPZSYSMPPardiso.h  TPZSolutionMatrix.cpp  TPZSolutionMatrix.h  TPZTensor.cpp  TPZTensor.h  TPZTensorTranslator.cpp  TPZTensorTranslator.h  TPZYSMPMatrix.cpp  TPZYSMPMatrix.h  TPZYSMPPardiso.cpp  TPZYSMPPardiso.h  doxmatrix.h  pzbasematrix.cpp  pzbasematrix.h  pzblock.cc  pzblock.cpp  pzblock.h  pzblockdiag.cc  pzblockdiag.cpp  pzblockdiag.h  (+66 more)
Mesh/: CMakeLists.txt  Makefile.am  Makefile.in  SPZPeriodicData.h  TPZAgglomerateEl.cc  TPZAgglomerateEl.cpp  TPZAgglomerateEl.h  TPZAgglomerateMesh.cpp  TPZApproxCreator.cpp  TPZApproxCreator.h  TPZApproxSpace.cpp  TPZApproxSpace.h  TPZCompElDisc.cc  TPZCompElDisc.cpp  TPZCompElDisc.h  TPZCompElDiscScaled.cpp  (+196 more)
(+4566 files in other folders)
